adding the webcam

--- a/workshop_octoprint_plugin/templates/workshop_tab.jinja2
+++ b/workshop_octoprint_plugin/templates/workshop_tab.jinja2
@@ -2,7 +2,8 @@
 
         <!-- need to add the camera here -->
 
-
+ <iframe width="100%" src="/webcam/?action=stream" style="border:none; margin: auto; display: block;"></iframe>
+ 
  <div class="row">
                 <div class="col-md-6">
 
