--- a/workshop_octoprint_plugin/templates/workshop_tab.jinja2
+++ b/workshop_octoprint_plugin/templates/workshop_tab.jinja2
@@ -4,10 +4,10 @@
 
  <iframe width="100%" src="/webcam/?action=stream" style="border:none; margin: auto; display: block;"></iframe>
  
- <div class="row">
+ <div class="row clearfix">
                 <div class="col-md-6">
 
-                    <div data-device="1" class="device-1">
+                    <div data-device="1" class="device">
                         <h2>Art 1</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Left</button>
@@ -16,7 +16,7 @@
                     </div>
 
 
-                    <div data-device="3" class="device-3">
+                    <div data-device="3" class="device">
                         <h2>Art 3</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Left</button>
@@ -24,7 +24,7 @@
                         </div>
                     </div>
 
-                    <div data-device="5" class="device-5">
+                    <div data-device="5" class="device">
                         <h2>Art 5</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Left</button>
@@ -32,7 +32,7 @@
                         </div>
                     </div>
 
-                    <div data-device="7" class="device-7">
+                    <div data-device="7" class="device">
                         <h2>Gripper</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Close</button>
@@ -45,7 +45,7 @@
 
                 <div class="col-md-6">
                     
-                    <div data-device="2" class="device-2">
+                    <div data-device="2" class="device">
                         <h2>Art 2</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Left</button>
@@ -53,7 +53,7 @@
                         </div>
                     </div>
 
-                    <div data-device="4" class="device-4">
+                    <div data-device="4" class="device">
                         <h2>Art 4</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Left</button>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
 
-                    <div data-device="6" class="device-6">
+                    <div data-device="6" class="device">
                         <h2>Art 6</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Left</button>
@@ -69,7 +69,7 @@
                         </div>
                     </div>
 
-                    <div data-device="8" class="device-6">
+                    <div data-device="8" class="device">
                         <h2>Vise</h2>
                         <div class="btn-group" role="group" aria-label="...">
                             <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Close</button>
