--- a/workshop_octoprint_plugin/static/css/style.css
+++ b/workshop_octoprint_plugin/static/css/style.css
@@ -13,6 +13,12 @@
     text-align: center; 
 }
 
+.camera {
+    width: 50%;
+    float: left;
+    text-align: center; 
+}
+
 .device {
     margin-bottom: 40px;
 }
