adding two more cameras to the workshop view

--- a/workshop_octoprint_plugin/templates/workshop_tab.jinja2
+++ b/workshop_octoprint_plugin/templates/workshop_tab.jinja2
@@ -13,6 +13,15 @@
 </div>
 </div>
 
+<div class="row clearfix">
+<div class="camera">
+<img id="webcam_image" data-bind="css: { flipH: settings.webcam_flipH(), flipV: settings.webcam_flipV() }" src="/webcam/?action=stream"> 
+</div>
+<div class="camera">
+<img id="webcam_image" data-bind="css: { flipH: settings.webcam_flipH(), flipV: settings.webcam_flipV() }" src="/webcam3/?action=stream"> 
+</div>
+</div>
+
  <div class="row clearfix">
                 <div class="col-md-6">
 
