--- a/workshop_octoprint_plugin/templates/workshop_tab.jinja2
+++ b/workshop_octoprint_plugin/templates/workshop_tab.jinja2
@@ -22,6 +22,15 @@
 </div>
 </div>
 
+<div class="row clearfix">
+                <div class="col-md-6">
+                    <button type="button" id="activateBtn">Activate</button>
+                </div>
+                <div class="col-md-6">
+                    <button type="button" id="deactivateBtn">Deactivate</button>
+                </div>
+</div>
+
  <div class="row clearfix">
                 <div class="col-md-6">
 
