minor cosmetic changes

--- a/workshop_octoprint_plugin/static/css/style.css
+++ b/workshop_octoprint_plugin/static/css/style.css
@@ -36,3 +36,7 @@
 * html .clearfix { height: 1%; }
 .clearfix { display: block; }
 /* close commented backslash hack */
+
+.admin-buttons {
+    margin-top: 20px;
+}
