--- a/workshop_octoprint_plugin/templates/workshop_tab.jinja2
+++ b/workshop_octoprint_plugin/templates/workshop_tab.jinja2
@@ -22,12 +22,12 @@
 </div>
 </div>
 
-<div class="row clearfix">
+<div class="row clearfix admin-buttons">
                 <div class="col-md-6">
-                    <button type="button" id="activateBtn">Activate</button>
+                    <button type="button" id="activateBtn" class="btn btn-default" onclick="activate(this)">Activate</button>
                 </div>
                 <div class="col-md-6">
-                    <button type="button" id="deactivateBtn">Deactivate</button>
+                    <button type="button" id="deactivateBtn" class="btn btn-default" onclick="deactivate(this)">Deactivate</button>
                 </div>
 </div>
 
