--- a/workshop_octoprint_plugin/templates/workshop_tab.jinja2
+++ b/workshop_octoprint_plugin/templates/workshop_tab.jinja2
@@ -62,8 +62,8 @@
                     <div data-device="7" class="device">
                         <h2>Gripper</h2>
                         <div class="btn-group" role="group" aria-label="...">
-                            <button type="button" data-dir="0" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Close</button>
-                            <button type="button" data-dir="1" onmousedown="onmousedownHandler(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Open</button>
+                            <button type="button" data-dir="0" onmousedown="onmousedownHandlerGripper(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Close</button>
+                            <button type="button" data-dir="1" onmousedown="onmousedownHandlerGripper(this)" onmouseup="onmouseupHandler(this)" class="btn btn-default">Open</button>
                         </div>
                     </div>
                  
